# mcp-goodnews

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  unit_test.yml
src/mcp_goodnews/: __init__.py  goodnews_ranker.py  llm.py  llm_cohere.py  newsapi.py  server.py
tests/: test_api_keys.py  test_goodnews_ranker.py  test_hello.py  test_mcp_server.py
tests/test_goodnews_ranker/: conftest.py  test_ranker.py
tests/test_newsapi_models/: conftest.py  example_response.json  test_schema.py
